Add non-Fixed task completion flow